# ultraleap-osc-sender

./: README.md  pyproject.toml
leapc-python-api/src/leap.egg-info/: PKG-INFO  SOURCES.txt
pure-data/: osc-receiving-example.pd
ultraleap_osc_sender/: __main__.py
